# jltg-mapper

./: .env.example  .gitignore  JETLAG-HIDE-AND-SEEK-RULES.md  Makefile  README.md  docker-compose.yml
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: __init__.py  config.py  db.py  deduction.py  main.py  models.py  reducer.py  schemas.py  services.py  websocket.py
backend/app/api/: __init__.py  auth.py  events.py  games.py
backend/tests/: conftest.py  test_api.py  test_deduction.py  test_health.py  test_migrations.py  test_reducer.py  test_websocket.py
data/: README.md  aquariums.geojson  consulates.geojson  dog-parks.geojson  farmers-markets.geojson  game-config.json  golf-courses.geojson  hospitals.geojson  libraries.geojson  mountains.geojson  movie-theaters.geojson  museums.geojson  parking-permit-zones.json  rail-stations.geojson  transit-modes.json  valid-hiding-stations.geojson
docs/: DESIGN.md  data-pipeline.md
docs/superpowers/specs/: 2026-06-18-mapper-parallel-agent-orchestration-design.md
frontend/: .gitignore  package.json  pnpm-lock.yaml  vite.config.ts
frontend/scripts/: build_basemap.sh  copy_assets.sh
frontend/src/: App.tsx  index.css
frontend/src/components/: Map.tsx  RunClock.tsx
frontend/src/lib/: api.ts  basemap.ts  db.ts  geo.ts  layers.ts  questions.ts  reducer.ts  (+5 more)
scripts/: README.md  build_basemap.sh  build_border.py  build_hiding_zones.py  build_voronoi.py  requirements.txt
scripts/tests/: test_geo_pipeline.py
(+5 files in other folders)
