[project]
name = "jltg-mapper-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.137.2",
    "geojson>=3.3.0",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.1",
    "shapely>=2.1.2",
    "sqlalchemy>=2",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.0",
    "ruff>=0.15.18",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
